agregue un commit a rama bifurcacion

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         Hoy es un gran día,&nbsp;<div id="diaSemana"></div>&nbsp;<div id="dia"></div>&nbsp;de&nbsp;<div id="mesLetra"></div>
     
     </div>
+
     <h1>Hola Dani, que comience el juego...</h1>
-    
+    <h2>Esta es otra rama</h2>
  <br>
  <br>
  <br>
