--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
-    <link href="https://fonts.googleapis.com/css2?family=Pangolin&family=Yanone+Kaffeesatz:wght@500;700&display=swap" rel="stylesheet">
-    <title>Document</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="estilos.css" />
 
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pangolin&family=Yanone+Kaffeesatz:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Document</title>
+  </head>
+
+  <body>
     <!-- Voy con mi vedette la hora : ) -->
     <div class="contenedor_fecha">
-        
-        Hoy es un gran día,&nbsp;<div id="diaSemana"></div>&nbsp;<div id="dia"></div>&nbsp;de&nbsp;<div id="mesLetra"></div>
-    
+      Hoy es un gran día,&nbsp;
+      <div id="diaSemana"></div>
+      &nbsp;
+      <div id="dia"></div>
+      &nbsp;de&nbsp;
+      <div id="mesLetra"></div>
     </div>
 
     <h1>Hola Dani, que comience el juego...</h1>
     <h2>Esta es otra rama</h2>
- <br>
- <br>
- <br>
- <br>
- <br>
- <br>
-<!-- <p>Dani, me habia trabado ayer en un error lo llame a la hoja de app.js como un link y me tiraba este error del servidor   Refused to apply style from 'http://127.0.0.1:5500/static/app.js' because its MIME type ('text/html') is not a supported stylesheet MIME type, and strict MIME checking is enabled.  porque yo habia puesto esto <link rel="stylesheet" href="app.js"> y le saque el rel no me tiraba  ya mas el error, pero no me la habilitaba la pagina entonces si o si tuve que  hacer esto  <script src="app.js"></script>  </p> -->
-     <script src="app.js"></script>    
-</body>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <!-- <p>Dani, me habia trabado ayer en un error lo llame a la hoja de app.js como un link y me tiraba este error del servidor   Refused to apply style from 'http://127.0.0.1:5500/static/app.js' because its MIME type ('text/html') is not a supported stylesheet MIME type, and strict MIME checking is enabled.  porque yo habia puesto esto <link rel="stylesheet" href="app.js"> y le saque el rel no me tiraba  ya mas el error, pero no me la habilitaba la pagina entonces si o si tuve que  hacer esto  <script src="app.js"></script>  </p> -->
+    <script src="app.js"></script>
+  </body>
 </html>
