Mostrar hora al lado de la fecha

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <div id="dia"></div>
       &nbsp;de&nbsp;
       <div id="mesLetra"></div>
+      &nbsp;y son las&nbsp;
+      <div id="hora"></div>
     </div>
 
     <h1>Hola Dani, que comience el juego...</h1>
